Fixed a bug with the flexbox alignment

--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -28,7 +28,7 @@
         -webkit-print-color-adjust: exact;
         display: flex;
         min-height: 0;
-        align-items: center | flex-start;
+        align-items: flex-start;
         flex-wrap: wrap;
         div {
             width: 50vw;
